--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,47 @@
-version: "3.9"
+version: '3.9'
 
 services:
   backend:
     build: .
     container_name: portfolio_teacher_backend
-    restart: always
-    env_file: .env
+    command: node server.js
     ports:
       - "5000:5000"
+    environment:
+      - NODE_ENV=development
+      - DB_HOST=db
+      - DB_USER=postgres
+      - DB_PASS=12345678
+      - DB_NAME=teacher_portfolio
     depends_on:
       - db
-    environment:
-      DB_HOST: db
-    command: npm start
+    volumes:
+      - .:/app
+      - ./uploads:/app/uploads
 
   db:
     image: postgres:15
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_DB: ${DB_NAME}
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 12345678
+      POSTGRES_DB: teacher_portfolio
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 
+  nginx:
+    image: nginx:latest
+    container_name: portfolio_nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./uploads:/app/uploads  # чтобы раздавать файлы если нужно
+
 volumes:
-  pg_data:
+  pgdata:
